@@ -1,5 +1,12 @@
 2008-10-03  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.c
+		- (internal_init): when creating wifi networks, make the default button
+			be "Create" instead of "Connect" (rh #465397); make the default
+			button actually be default (bgo #554700) (patch from Rui Matos)
+
+2008-10-03  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/page-ip4.c
 		- (routes_button_clicked_cb): check method before trying to use it
 			(rh #465395)
